--- a/README.textile
+++ b/README.textile
@@ -1,4 +1,4 @@
-A low contrast, easy on eyes theme for textmate. Inspired in the "Havenjark Farm":http://www.tentonhammer.com/image/view/76321/preview color palette (a zone in the MMORPG game "Aion":http://aionradar.com/).
+A low contrast, easy on eyes theme for textmate. 
 
 To use, copy it to ~/Library/Application\ Support/TextMate/Themes/
 
@@ -6,4 +6,8 @@ Copyright (c) 2010 Rodrigo Franco, released under the MIT license
 
 
 !http://img.skitch.com/20091228-qd3p7i86ddgb3tiq2m8jx5psji.jpg!
+
+Color palette inspiration: Havenjark Farm ("aion":http://aionradar.com/ zone)
+
+!http://s3.amazonaws.com:80/caffo.baconfile.com/havenjark.jpg!
 
