--- a/README.textile
+++ b/README.textile
@@ -5,8 +5,5 @@ theme file.
 
 !http://img.skitch.com/20091228-qd3p7i86ddgb3tiq2m8jx5psji.jpg!
 
-Color palette inspiration: Havenjark Farm (a leveling zone from the MMORPG "Aion":http://aionradar.com/)
-
-!http://s3.amazonaws.com:80/caffo.baconfile.com/havenjark.jpg!
-
+Color palette inspiration: "Havenjark Farm":http://s3.amazonaws.com:80/caffo.baconfile.com/havenjark.jpg (a leveling zone from the MMORPG "Aion":http://aionradar.com/)
 Copyright (c) 2010 Rodrigo Franco, released under the MIT license
